<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context=".login">

<Space android:layout_width="match_parent"
    android:layout_height="200dp"></Space>



    <EditText
        android:id = "@+id/username"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/username"
        android:layout_margin="30dp"
        android:textColor="@color/black"/>

    <EditText
        android:id = "@+id/password"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "textPassword"
        android:layout_margin="30dp"
        android:hint = "@string/password0"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:layout_marginLeft="130dp"
        android:textSize="14dp"/>
        <Space android:layout_height="match_parent"
            android:layout_width="4dp"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text = "@string/login_here"
            android:textSize="14dp"
            android:clickable="true"
            android:focusable="true"
            />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="100dp"
        android:text="@string/login_button"
        android:textSize="30dp"

        style="@style/white"
        />


</LinearLayout>