<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:background="@drawable/login_background"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style = "@style/white">
        <ImageButton
            android:id="@+id/back_arrow_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:background="@null"
            />

    </androidx.appcompat.widget.Toolbar>

<Space
    android:layout_width="match_parent"
    android:layout_height="100dp"/>

    <EditText
        android:id = "@+id/username_register"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/username"
        android:layout_margin="30dp"
        android:textColor="@color/black"/>

    <EditText
        android:id = "@+id/password_register"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "textPassword"
        android:layout_margin="30dp"
        android:hint = "@string/password0"
        android:textColor="@color/black"
        />
    <EditText
        android:id = "@+id/email_register"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_margin="30dp"
        android:hint = "@string/email_register"
        android:textColor="@color/black"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="100dp"
        android:text="@string/register_button"
        android:textSize="30dp"

        style="@style/white"
        />



</LinearLayout>